responsive to screen sizes

--- a/src/Public/style.css
+++ b/src/Public/style.css
@@ -1,11 +1,12 @@
-* {
-	box-sizing: border-box;
-}
-
 body {
 	background-color: #f1faee;
 	margin: 0;
 	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+img,
+picture,
+video {
+	max-width: 100%;
 }
 header {
 	color: #f1faee;
