--- a/src/Public/style.css
+++ b/src/Public/style.css
@@ -41,17 +41,33 @@ p {
 h5 {
 	color: #e63946;
 }
-
 button {
-	width: 50px;
-	height: 50px;
-	border-radius: 48%;
-	padding: 0.25rem;
+	width: 40px;
+	max-height: 40px;
+	border-radius: 10%;
 	margin: 0.5rem;
+	padding: 1px;
+	display: inline-block;
 	background-color: #e63946;
 	border-style: none;
 	font-size: 40px;
 	cursor: pointer;
+	text-decoration: none;
+	color: black;
+}
+
+.button {
+	width: 60px;
+	max-height: 40px;
+	border-radius: 10%;
+	margin: 0.5rem;
+	display: inline-block;
+	background-color: #e63946;
+	border-style: none;
+	font-size: 40px;
+	cursor: pointer;
+	text-decoration: none;
+	color: black;
 }
 .side {
 	display: flex;
